ReadableStream C++ methods should check for exception https://bugs.webkit.org/show_bug.cgi?id=215376 <rdar://problem/66816192>

Reviewed by Alex Christensen.

Source/WebCore:

Refactor code to catch and handle exceptions in case of ReadableStream methods.
Exceptions can happen in case of worker being abruptly terminated, which can only be tested flakily.

In case of tee, if an exception happens, we return a WTF::nullopt.

Test: streams/readable-stream-tee-worker.html

* Modules/fetch/FetchBody.cpp:
(WebCore::FetchBody::clone):
* bindings/js/ReadableStream.cpp:
(WebCore::invokeReadableStreamFunction):
(WebCore::ReadableStream::pipeTo):
(WebCore::ReadableStream::tee):
(WebCore::ReadableStream::lock):
(WebCore::checkReadableStream):
* bindings/js/ReadableStream.h:

LayoutTests:

* streams/readable-stream-tee-worker-expected.txt: Added.
* streams/readable-stream-tee-worker.html: Added.
* streams/readable-stream-tee.js: Added.
(teeRepetitively):
(test):


Canonical link: https://commits.webkit.org/233544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272166 268f45cc-cd09-0410-ab3c-d52691b4dbfc